Require attachment and retain across invalid submissions

--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -18,6 +18,18 @@
   <% end %>
 
   <%= f.file_field :documents, multiple: true %>
+  <%= f.hidden_field :documents_cache %>
+
+  <% if @submission.documents? %>
+    <%= f.form_group :documents do %>
+      Already Uploaded Documents for this Submission:
+      <ul>
+      <% @submission.documents.each do |doc| %>
+        <li><%= doc.filename %></li>
+      <% end %>
+      </ul>
+    <% end %>
+  <% end %>
 
   <%= f.form_group do %>
     <%= f.submit %>
