--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Static#home</h1>
-<p>Find me in app/views/static/home.html.erb</p>
+<h1>Hi!</h1>
+<p>This is a Quick Submission form for MIT's Open Access Collection.</p>
+<p>Get started with a <%= link_to('new submission', new_submission_path) %>.</p>
+<p>DSpace submission forms remain available if you prefer.</p>
