Allow admins to filter submissions and view details
closes #49

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
 
       <footer>
         <hr />
-        <p>&copy; MIT Libraries 2015</p>
+        <p>&copy; <%= link_to('MIT Libraries', 'https://libraries.mit.edu', style: 'color: white;') %> <%= Time.new.year %></p>
       </footer>
 
     </div> <!-- /container -->
