--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -65,7 +65,7 @@ $(function() {
       paramName:        'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
       dataType:         'XML',  // S3 returns XML if success_action_status is set to 201
       replaceFileInput: true,
-      acceptFileTypes: /(\.|\/)(pdf)$/i,
+      //acceptFileTypes: /(\.|\/)(pdf)$/i,
       progressall: function (e, data) {
         var progress = parseInt(data.loaded / data.total * 100, 10);
         progressBar.css('width', progress + '%')
