--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -9,13 +9,13 @@
                        control_col: "col-sm-10") do |f| %>
   <%= f.alert_message "Please fix the errors below." %>
   <%= f.text_field :title %>
-  <%= f.text_field :journal, help: 'Optional' %>
-  <%= f.text_field :doi, label: 'DOI' %>
+  <%= f.text_field :journal, placeholder: 'Optional' %>
+  <%= f.text_field :doi, label: 'DOI', placeholder: 'Optional' %>
   <%= f.date_select :pub_date, discard_day: true, include_blank: true,
                                label: 'Publication Date',
                                help: 'If not yet published, please enter an estimated Publication Date.'%>
 
-  <%= f.form_group :agreed_to_license do %>
+  <%= f.form_group :agreed_to_license, label: { text: "Authorized", class: 'required' } do %>
     <%= f.check_box :agreed_to_license,
         label: "I am authorized to submit this article." %>
   <% end %>
