Add pub_date and funders to mets
This will need some crosswalk work for the funders.

--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -6,8 +6,10 @@
   <li>Expected Publication Date: <%= @submission.pub_date.strftime("%B %Y") if @submission.pub_date %></li>
   <li>Funder(s):
     <ul>
-      <% @submission.funders.each do |funder| %>
-        <li><%= funder %></li>
+      <% if @submission.funders.present? %>
+        <% @submission.funders.each do |funder| %>
+          <li><%= funder %></li>
+        <% end %>
       <% end %>
     </ul>
   </li>
