--- a/app/views/submission_mailer/queued.html.erb
+++ b/app/views/submission_mailer/queued.html.erb
@@ -4,5 +4,6 @@
 <%= @submission.title %>
 </p>
 
-<p>We'll get to work adding that to DSpace for you. You'll receive an email with
-your persistent URL when we finish that up in a few business days.</p>
+<p>We are working on completing your submission to DSpace. You’ll receive an
+email with your persistent URL when we complete the submission, which normally
+takes a few days.</p>
