--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,11 @@
-<h1>Hi!</h1>
-<p>This is a Quick Submission form for MIT's Open Access Collection.</p>
+<p><%= link_to('Federal research funders require', 'http://libraries.mit.edu/scholarly/publishing/research-funders/research-funder-open-access-requirements/') %>
+articles they sponsor to be made openly accessible. Use this form to deposit
+papers to MIT's Open Access Collection in relation to these requirements. You
+will receive a persistent URL to give to your research funder(s), and your
+article will be embargoed if required.</p>
+
 <p>Get started with a <%= link_to('new submission', new_submission_path) %>.</p>
-<p>DSpace submission forms remain available if you prefer.</p>
+
+<p>If you're submitting an article under the MIT Open Access Policy instead of
+in relation to funder requirements, there is a
+<%= link_to('shorter form available', 'https://dspace.mit.edu/handle/1721.1/49433/submit') %>.</p>
