Updates displayed application name and funder list

--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,4 +1,4 @@
-<h1>MIT DSpace Quick Submit Submissions</h1>
+<h1>Public Access QuickSubmit Submissions</h1>
 
 View:
  <%= link_to('All', submissions_path, class: 'btn btn-default') %>
