--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,3 +1,5 @@
+<h1>Public Access QuickSubmit</h1>
+
 <p><%= link_to('Federal research funders require', 'http://libraries.mit.edu/scholarly/publishing/research-funders/research-funder-open-access-requirements/') %>
 articles they sponsor to be made openly accessible. Use this form to deposit
 papers to MIT's Open Access Collection in relation to these requirements. You
