--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -1,3 +1,5 @@
+<h1>Public Access QuickSubmit Submissions</h1>
+
 <ul>
   <li>Email: <%= mail_to(@submission.user.email) %></li>
   <li>Submitted: <%= @submission.created_at %></li>
