--- a/app/views/submission_mailer/deposited.html.erb
+++ b/app/views/submission_mailer/deposited.html.erb
@@ -1,6 +1,4 @@
-<h1>Hi!</h1>
-
-<p>Your submission has been successfully deposited into DSpace@MIT:<br />
+<p>Hello, your submission has been successfully deposited into DSpace@MIT:<br />
 <%= @submission.title %></p>
 
 <p>The persistent URL is:<br />
