--- a/app/views/submission_mailer/deposited.text.erb
+++ b/app/views/submission_mailer/deposited.text.erb
@@ -1,6 +1,4 @@
-Hi!
-
-Your submission has been successfully deposited into DSpace@MIT:
+Hello, your submission has been successfully deposited into DSpace@MIT:
 <%= @submission.title %>
 
 The persistent URL is:
