--- a/app/views/submission_mailer/queued.text.erb
+++ b/app/views/submission_mailer/queued.text.erb
@@ -1,6 +1,4 @@
-Hi!
-
-We received your submission:
+Hello, we received your submission:
 <%= @submission.title %>
 
 We are working on completing your submission to DSpace. You’ll receive an
