--- a/app/views/submission_mailer/rejected.text.erb
+++ b/app/views/submission_mailer/rejected.text.erb
@@ -1,6 +1,4 @@
-Hi!
-
-We have run into a problem with your submission for:
+Hello, we have run into a problem with your submission for:
 <%= @submission.title %>
 
 A staff member will be contacting you personally to assist in resolving the
