--- a/app/views/submission_mailer/queued.html.erb
+++ b/app/views/submission_mailer/queued.html.erb
@@ -1,6 +1,4 @@
-<h1>Hi!</h1>
-
-<p>We received your submission:<br />
+<p>Hello, we received your submission:<br />
 <%= @submission.title %>
 </p>
 
