--- a/app/views/submission_mailer/rejected.html.erb
+++ b/app/views/submission_mailer/rejected.html.erb
@@ -1,6 +1,4 @@
-<h1>Hi!</h1>
-
-<p>We have run into a problem with your submission for:<br />
+<p>Hello, we have run into a problem with your submission for:<br />
 <%= @submission.title %></p>
 
 <p>A staff member will be contacting you personally to assist in resolving the
