--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Public Access QuickSubmit</h1>
+<h3 class="title title-page">Submit a new paper</h3>
 
 <%= bootstrap_form_for(@submission,
                        html: { class: 'submissionUpload',
