--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -1,3 +1,5 @@
+<h3 class="title title-page">Details for: <%= @submission.title %></h3>
+
 <ul>
   <li>Email: <%= mail_to(@submission.user.email) %></li>
   <li>Submitted: <%= @submission.created_at %></li>
