--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "MIT Libraries" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Public Access QuickSubmit" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic&subset=latin,latin-ext" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
@@ -40,7 +40,7 @@
         </header>
       </div>
     </div>
-    <div class="wrap-outer-header-local layout-band">
+    <div class="wrap-outer-header-local layout-band <%= 'reasons' if params[:rainbows] %>">
       <div class="wrap-header-local">
         <div class="local-identity">
           <h2 class="title title-site"><a href="/">Public Access QuickSubmit</a></h2>
@@ -69,7 +69,7 @@
               <% end %>
             </nav>
           </div>
-        </div> 
+        </div>
       </div>
     </div>
     <div class="wrap-outer-content layout-band">
@@ -80,7 +80,7 @@
         <%= yield %>
 
         </main>
-        <!-- close content-main -->   
+        <!-- close content-main -->
 
         <aside class="content-sup">
 
@@ -141,7 +141,7 @@
 
 
   </div>
-  <!-- close wrap-page -->   
+  <!-- close wrap-page -->
 
   </body>
 </html>
