adjust footer logo sizing

--- a/app/assets/stylesheets/layout.css.erb
+++ b/app/assets/stylesheets/layout.css.erb
@@ -560,7 +560,7 @@ hr {
   fill: #f3f3f3;
 }
 .wrap-footer .logo-mit-lib svg {
-  width: 100%;
+  width: auto;
   height: auto;
 }
 .wrap-footer .wrap-usergroups {
