update old URLs

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to('Federal research funders require', 'http://libraries.mit.edu/scholarly/publishing/research-funders/research-funder-open-access-requirements/') %>
+<p><%= link_to('Federal research funders require', 'https://libraries.mit.edu/scholarly/research-funders/') %>
 articles they sponsor to be made openly accessible. Use this form to deposit
 papers to MIT's Open Access Collection in relation to these requirements. You
 will receive a persistent URL to give to your research funder(s), and your
